fix: add css fro index.html

--- a/style.css
+++ b/style.css
@@ -1,19 +1,43 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #413f32;
-}
-
-.menu {
   background-color: #c8b69b;
 }
 
+.menu {
+  margin: 20px;
+}
+
 .menu-title {
+  margin-bottom: 20px;
   font-size: 32px;
   text-align: center;
 }
 
 .menu-list {
   list-style: none;
+  padding: 0;
+}
+
+.menu-list > li {
+  display: inline-block;
+  margin-right: 15px;
+  width: calc((100% - 60px) / 3);
+  max-width: 350px;
+  height: 400px;
+  border: 1px solid #413f32;
+  border-radius: 4px;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.menu-list > li:last-child {
+  margin-right: 0;
 }
 
 ul {
