--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -11,33 +12,36 @@ body {
 
 .menu {
   margin: 20px;
+  border: 1px solid red;
 }
 
 .menu-title {
   margin-bottom: 20px;
   font-size: 32px;
   text-align: center;
+  
 }
 
 .menu-list {
+  /* margin: -15px; */
   list-style: none;
-  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .menu-list > li {
-  display: inline-block;
-  margin-right: 15px;
-  width: calc((100% - 60px) / 3);
-  max-width: 350px;
+  /* margin: 15px; */
+  /* width: calc((100% - 120px) / 4); */
+  /* max-width: 300px; */
   height: 400px;
   border: 1px solid #413f32;
   border-radius: 4px;
   background-color: #fff;
   overflow: hidden;
-}
-
-.menu-list > li:last-child {
-  margin-right: 0;
+  flex-basis: 300px;
 }
 
 ul {
